# Quantization_plateforme

./: README.md
backend/: .gitignore  Cargo.toml  Dockerfile  code.md  docker-compose.yml
backend/config/: base.toml  development.toml  production.toml
backend/migrations/: 20251211194748_table.sql
backend/scripts/: setup_db.sh  setup_env.sh
backend/src/: lib.rs  main.rs
backend/src/api/: admin.rs  auth.rs  billing.rs  file.rs  job.rs  mod.rs  user.rs
backend/src/api/routes/: auth.rs  jobs.rs  middleware.rs  mod.rs  models.rs  subscriptions.rs  upload.rs
backend/src/core/: billing_service.rs  job_service.rs  mod.rs  notification_service.rs  quantization_service.rs  user_service.rs
backend/src/core/quantization/: analysis.rs  gguf.rs  mod.rs  onnx.rs  pipeline.rs  pytorch.rs  validation.rs
backend/src/domain/: jobs.rs  mod.rs  model.rs  user.rs
backend/src/infrastructure/: error.rs  mod.rs
backend/src/infrastructure/database/: jobs.rs  mod.rs  subscriptions.rs  users.rs
backend/src/infrastructure/python/: awq.rs  gptq.rs  mod.rs
backend/src/infrastructure/queue/: mod.rs
backend/src/infrastructure/storage/: mod.rs
backend/src/models/: billing.rs  file.rs  job.rs  mod.rs  system.rs  user.rs
backend/src/services/: cache.rs  database.rs  external.rs  mod.rs  queue.rs  storage.rs
backend/src/utils/: config.rs  error.rs  helpers.rs  mod.rs  security.rs  validation.rs
backend/src/workers/: cleanup_worker.rs  mod.rs  quantization_worker.rs
