[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.8"
actix-rt = "2.10"
actix-cors = "0.7"
actix-multipart = "0.7"
actix-files = "0.6"
actix-service = "2.0"
tokio = { version = "1.37", features = ["full", "tracing"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
config = { version = "0.15.19", features = ["toml"] }
dotenvy = "0.15" 
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono","json","migrate"] }
redis = { version = "1.0.1"}
aws-config = "1.5"
aws-sdk-s3 = "1.50"
argon2 = { version = "0.5", features = ["std"] }
jsonwebtoken = {version =  "10.2.0", features = ["rust_crypto"] }
rand = "0.9"
uuid = { version = "1.10", features = ["v4", "fast-rng", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1.0"
thiserror = "2.0.17"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tempfile = "3.10"
mime = "0.3"
infer = "0.19"
pyo3 = { version = "0.27.2", features = ["extension-module"] }
bytes = "1.7"
futures-util = "0.3"
once_cell = "1.19"
validator = { version = "0.18", features = ["derive"] }
fred = "10.1.0"
ort = {version ="2.0.0-rc.10"}
rand_core = "0.6.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
