[package]
name = "quantization-platform"
version = "0.1.0"
edition = "2021"
description = "Plateforme de quantification de modèles d'IA"
authors = ["Votre Nom <votre@email.com>"]
license = "MIT"
repository = "https://github.com/votre-org/quantization-platform"
readme = "README.md"

[dependencies]
# Framework web
actix-web = "4.4"
actix-cors = "0.7"
actix-multipart = "0.7"

# Base de données
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "uuid", "chrono", "json", "macros"] }

# Redis
redis = { version = "0.23", features = ["tokio-comp"] }

# Stockage S3/MinIO
aws-sdk-s3 = "0.33"
aws-config = "0.56"

# Sécurité
jsonwebtoken = "9.2"
argon2 = "0.5"
aes-gcm = "0.10"
sha2 = "0.10"

# Validation
validator = { version = "0.16", features = ["derive"] }

# Sérialisation
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID
uuid = { version = "1.5", features = ["serde", "v4"] }

# Temps
chrono = { version = "0.4", features = ["serde"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Stripe
stripe = { version = "0.28", features = ["blocking"] }

# Email
lettre = { version = "0.11", optional = true }

# Async
tokio = { version = "1.35", features = ["full", "sync", "rt-multi-thread", "macros"] }
async-trait = "0.1"
futures-util = "0.3"
tokio-stream = "0.1"

# Utilitaires
dotenv = "0.15"
rand = "0.8"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
urlencoding = "2.1"

# Python integration (optionnel pour MVP)
pyo3 = { version = "0.20", optional = true, features = ["extension-module"] }

[dev-dependencies]
# Tests
tokio = { version = "1.35", features = ["full", "test-util"] }
testcontainers = "0.15"
assert-json-diff = "2.0"
wiremock = "0.5"

[features]
default = ["email", "python"]
email = ["lettre"]
python = ["pyo3"]